Fixes on Dashboard.fxml. Top navigation bar. Removed Statslabel on Dashboard.fxml